@@ -18,6 +18,7 @@
     * Added activator rail
     * Added quartz stairs
     * Added trapped chest
+    * Added weighted pressure plates
     * Allow opening read-only region files
     * If sunlight is disabled the sun will not be rendered
     * It is now possible to disable mirroring the sky at the horizon
